--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -6,14 +6,14 @@ layout: page
 <div class="row">
 
   <div class="col-md-8">
-
+    
     {% include index/description.html %}
-    {% include index/carousel.html title="Sample Items" %}
+
+    {% include index/carousel.html title="Sample Items" height=500 %}
     
   </div>
   <div class="col-md-4">  
 
-    {% include index/time.html %}
 
     {% include index/featured-terms.html field="subject" title="Top Subjects" btn-color="primary" %}
 
